--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,13 @@
         android:layout_gravity="center"
         android:text="Smart Add"/>
 
+    <Button
+        android:id="@+id/btn_smart_fib"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Smart Fib"/>
+
     <TextView
         android:id="@+id/tv_result"
         android:layout_width="match_parent"
